# jsplayer

./: .gitignore  CMakeLists.txt  build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/jsplayer/: js_constant.h  js_player.cpp  js_player.h  js_player_jni.cpp  js_player_jni.h
src/main/cpp/jsplayer/audio/: js_audio_player.cpp  js_audio_player.h
src/main/cpp/jsplayer/converter/: js_media_converter.cpp  js_media_converter.h
src/main/cpp/jsplayer/decoder/: js_java_mediacodec_wrapper.c  js_java_mediacodec_wrapper.h  js_media_decoder.cpp  js_media_decoder.h  js_media_decoder_context.cpp  js_media_hw_decoder_context.cpp  js_media_hw_decoder_context.h  js_mediacodec_def.h  js_ndk_mediacodec_proxy.c  js_ndk_mediacodec_proxy.h
src/main/cpp/jsplayer/event/: js_event_handler.cpp  js_event_handler.h
src/main/cpp/jsplayer/render/: js_egl_renderer.cpp  js_egl_renderer.h
src/main/cpp/jsplayer/util/: js_jni.c  js_jni.h  js_log.c  js_log.h  js_queue.h
src/main/java/com/joyshow/jsplayer/: Constant.java  MultiVideoActivity.java  SimpleVideoActivity.java  SingleVideoActivity.java
src/main/java/com/joyshow/jsplayer/player/: JSPlayer.java
src/main/java/com/joyshow/jsplayer/utils/: Logger.java  StackTraceInfo.java
src/main/res/layout/: activity_multi_video.xml  activity_simple_video.xml  activity_single_video.xml
